Solving Assignment 2 for Machine Learning Specialization Regression Week 5

--- a/Specializations/Machine Learning/Regression/Week 5/Assignment 2/week-5-lasso-assignment-2-blank.ipynb
+++ b/Specializations/Machine Learning/Regression/Week 5/Assignment 2/week-5-lasso-assignment-2-blank.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -53,11 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] \u001b[1;32m1451833325 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_FILE to /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/certifi/cacert.pem\n",
+      "\u001b[0m\u001b[1;32m1451833325 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_DIR to \n",
+      "\u001b[0mThis non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016. For commercial licensing options, visit https://dato.com/buy/.\n",
+      "\n",
+      "[INFO] Start server at: ipc:///tmp/graphlab_server-29762 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1451833325.log\n",
+      "[INFO] GraphLab Server Version: 1.7.1\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')\n",
     "# In the dataset, 'floors' was defined with type string, \n",
@@ -88,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -99,12 +112,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_numpy_data(data_sframe, features, output):\n",
+    "    data_sframe['constant'] = 1 # this is how you add a constant column to an SFrame\n",
+    "    # add the column 'constant' to the front of the features list so that we can extract it along with the others:\n",
+    "    features = ['constant'] + features # this is how you combine two lists\n",
+    "    # select the columns of data_SFrame given by the features list into the SFrame features_sframe (now including constant):\n",
+    "    features_sframe = data_sframe[features]\n",
+    "    # the following line will convert the features_SFrame into a numpy matrix:\n",
+    "    feature_matrix = features_sframe.to_numpy()\n",
+    "    # assign the column of data_sframe associated with the output to the SArray output_sarray\n",
+    "    output_sarray = data_sframe[output]\n",
+    "    # the following will convert the SArray into a numpy array by first converting it to a list\n",
+    "    output_array = output_sarray.to_numpy()\n",
+    "    return(feature_matrix, output_array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,12 +142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def predict_output(feature_matrix, weights):\n",
+    "    # assume feature_matrix is a numpy matrix containing the features as columns and weights is a corresponding numpy array\n",
+    "    # create the predictions vector by using np.dot()\n",
+    "    predictions = np.dot(feature_matrix, weights)\n",
+    "    return(predictions)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,11 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  3.   5.   8.]\n",
+      " [  4.  12.  15.]]\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.array([[3.,5.,8.],[4.,12.,15.]])\n",
     "print X"
@@ -155,11 +197,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  5.  13.  17.]\n"
+     ]
+    }
+   ],
    "source": [
     "norms = np.linalg.norm(X, axis=0) # gives [norm(X[:,0]), norm(X[:,1]), norm(X[:,2])]\n",
     "print norms"
@@ -174,11 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.6         0.38461538  0.47058824]\n",
+      " [ 0.8         0.92307692  0.88235294]]\n"
+     ]
+    }
+   ],
    "source": [
     "print X / norms # gives [X[:,0]/norm(X[:,0]), X[:,1]/norm(X[:,1]), X[:,2]/norm(X[:,2])]"
    ]
@@ -192,12 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def normalize_features(feature_matrix):\n",
+    "    norms = np.linalg.norm(feature_matrix, axis=0)\n",
+    "    normalized_features = feature_matrix / norms\n",
+    "    return (normalized_features, norms)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,11 +272,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.6  0.6  0.6]\n",
+      " [ 0.8  0.8  0.8]]\n",
+      "[  5.  10.  15.]\n"
+     ]
+    }
+   ],
    "source": [
     "features, norms = normalize_features(np.array([[3.,6.,9.],[4.,8.,12.]]))\n",
     "print features\n",
@@ -288,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -308,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -326,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -344,13 +418,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "prediction = "
+    "prediction = predict_output(simple_feature_matrix, weights)"
    ]
   },
   {
@@ -370,12 +444,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[87939470.772991076, 80966698.675965652]\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_ro = []\n",
+    "for indx in range(len(simple_features)):\n",
+    "    i = indx + 1 #not interested in intercept\n",
+    "    ro = (simple_feature_matrix[:,i] * (output - prediction + weights[i] * simple_feature_matrix[:,i])).sum()\n",
+    "    all_ro.append(ro)\n",
+    "    \n",
+    "print all_ro"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -388,12 +478,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#l1_penalty = 87939470.77 * 2 #max\n",
+    "#l1_penalty = 80966698.68 * 2 #min\n",
+    "l1_penalty = 1.4e8 #False, False\n",
+    "l1_penalty = 1.64e8 #False, True\n",
+    "l1_penalty = 1.73e8 #False, True\n",
+    "l1_penalty = 1.9e8 #True, True\n",
+    "l1_penalty = 2.3e8 #True, True\n",
+    "\n",
+    "print (-l1_penalty/2 <= all_ro[0] <= l1_penalty/2)\n",
+    "print (-l1_penalty/2 <= all_ro[1] <= l1_penalty/2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -406,12 +516,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1_penalty = 87939470.78 * 2 #max\n",
+    "l1_penalty = 1.4e8 #False, False\n",
+    "l1_penalty = 1.64e8 #False, True\n",
+    "l1_penalty = 1.73e8 #False, True\n",
+    "l1_penalty = 1.9e8 #True, True\n",
+    "l1_penalty = 2.3e8 #True, True\n",
+    "\n",
+    "print (-l1_penalty/2 <= all_ro[0] <= l1_penalty/2)\n",
+    "print (-l1_penalty/2 <= all_ro[1] <= l1_penalty/2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -444,16 +573,16 @@
    "source": [
     "def lasso_coordinate_descent_step(i, feature_matrix, output, weights, l1_penalty):\n",
     "    # compute prediction\n",
-    "    prediction = ...\n",
+    "    prediction = predict_output(feature_matrix, weights)\n",
     "    # compute ro[i] = SUM[ [feature_i]*(output - prediction + weight[i]*[feature_i]) ]\n",
-    "    ro_i = ...\n",
+    "    ro_i = (feature_matrix[:,i] * (output - prediction + weights[i] * feature_matrix[:,i])).sum()\n",
     "\n",
     "    if i == 0: # intercept -- do not regularize\n",
     "        new_weight_i = ro_i \n",
     "    elif ro_i < -l1_penalty/2.:\n",
-    "        new_weight_i = ...\n",
+    "        new_weight_i = ro_i + l1_penalty/2\n",
     "    elif ro_i > l1_penalty/2.:\n",
-    "        new_weight_i = ...\n",
+    "        new_weight_i = ro_i - l1_penalty/2\n",
     "    else:\n",
     "        new_weight_i = 0.\n",
     "    \n",
@@ -469,11 +598,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.425558846691\n"
+     ]
+    }
+   ],
    "source": [
     "# should print 0.425558846691\n",
     "import math\n",
@@ -524,14 +661,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def lasso_cyclical_coordinate_descent(feature_matrix, output, initial_weights, l1_penalty, tolerance):\n",
-    "    "
+    "    weights = initial_weights\n",
+    "    optimized = False\n",
+    "    while not optimized:\n",
+    "        weights_diff = []\n",
+    "        for i in range(len(weights)):\n",
+    "            old_weights_i = weights[i] # remember old value of weight[i], as it will be overwritten\n",
+    "            \n",
+    "            # the following line uses new values for weight[0], weight[1], ..., weight[i-1]\n",
+    "            #     and old values for weight[i], ..., weight[d-1]\n",
+    "            weights[i] = lasso_coordinate_descent_step(i, feature_matrix, output, weights, l1_penalty)\n",
+    "\n",
+    "            # use old_weights_i to compute change in coordinate\n",
+    "            weights_diff.append(abs(old_weights_i - weights[i]))\n",
+    "        \n",
+    "        if sum(weights_diff) < tolerance:\n",
+    "            optimized = True\n",
+    "    \n",
+    "    return weights"
    ]
   },
   {
@@ -543,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -565,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {
     "collapsed": true
    },
@@ -584,14 +738,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 21624996.54143479  63157248.45487124         0.        ]\n",
+      "1.63049246479e+15\n"
+     ]
+    }
+   ],
    "source": [
     "weights = lasso_cyclical_coordinate_descent(normalized_simple_feature_matrix, output,\n",
-    "                                            initial_weights, l1_penalty, tolerance)"
+    "                                            initial_weights, l1_penalty, tolerance)\n",
+    "\n",
+    "print weights\n",
+    "\n",
+    "prediction = predict_output(normalized_simple_feature_matrix, weights)\n",
+    "RSS = ((prediction-output)**2).sum()\n",
+    "\n",
+    "print RSS"
    ]
   },
   {
@@ -619,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -637,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {
     "collapsed": true
    },
@@ -667,12 +837,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "(feature_matrix, output) = get_numpy_data(train_data, all_features, my_output)\n",
+    "(normalized_feature_matrix, norms) = normalize_features(feature_matrix) # normalize features"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -683,12 +856,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 24429598.34220435         0.                 0.          48389176.48719849\n",
+      "         0.                 0.           3317511.16568974\n",
+      "   7329961.84498793         0.                 0.                 0.\n",
+      "         0.                 0.                 0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1_penalty=1e7\n",
+    "tolerance=1.0\n",
+    "all_initial_weights = np.zeros(14)\n",
+    "weights1e7 = lasso_cyclical_coordinate_descent(normalized_feature_matrix, output, \n",
+    "                                               all_initial_weights, l1_penalty, tolerance)\n",
+    "\n",
+    "print weights1e7"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -710,12 +902,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 71114625.75280938         0.                 0.                 0.\n",
+      "         0.                 0.                 0.                 0.\n",
+      "         0.                 0.                 0.                 0.\n",
+      "         0.                 0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1_penalty=1e8\n",
+    "tolerance=1.0\n",
+    "all_initial_weights = np.zeros(14)\n",
+    "weights1e8 = lasso_cyclical_coordinate_descent(normalized_feature_matrix, output, \n",
+    "                                               all_initial_weights, l1_penalty, tolerance)\n",
+    "\n",
+    "print weights1e8"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -735,12 +946,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.07452054e+08  -1.90511244e+07   3.42603262e+06   1.73622706e+08\n",
+      "  -1.79305042e+06  -4.47779699e+06   6.72209311e+06   5.76010113e+06\n",
+      "   1.81160538e+07   9.74183215e+07  -9.85424762e+07  -2.60507297e+07\n",
+      "  -1.88443642e+08   3.03904311e+06]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1_penalty=1e4\n",
+    "tolerance=5e5\n",
+    "all_initial_weights = np.zeros(14)\n",
+    "weights1e4 = lasso_cyclical_coordinate_descent(normalized_feature_matrix, output, \n",
+    "                                               all_initial_weights, l1_penalty, tolerance)\n",
+    "\n",
+    "print weights1e4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -788,12 +1018,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "161.317463366\n",
+      "161.317456248\n"
+     ]
+    }
+   ],
+   "source": [
+    "normalized_weights1e4 = weights1e4 / norms\n",
+    "normalized_weights1e7 = weights1e7 / norms\n",
+    "normalized_weights1e8 = weights1e8 / norms\n",
+    "\n",
+    "print normalized_weights1e7[3]\n",
+    "print round(161.31745624837794, 9)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -822,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {
     "collapsed": true
    },
@@ -840,30 +1086,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.06896417446e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction1e4 = predict_output(test_feature_matrix, normalized_weights1e4)\n",
+    "RSS1e4 = ((prediction1e4-test_output)**2).sum()\n",
+    "\n",
+    "print RSS1e4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.75962075771e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction1e7 = predict_output(test_feature_matrix, normalized_weights1e7)\n",
+    "RSS1e7 = ((prediction1e7-test_output)**2).sum()\n",
+    "\n",
+    "print RSS1e7"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.37166150034e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction1e8 = predict_output(test_feature_matrix, normalized_weights1e8)\n",
+    "RSS1e8 = ((prediction1e8-test_output)**2).sum()\n",
+    "\n",
+    "print RSS1e8"
+   ]
   },
   {
    "cell_type": "markdown",
