Answering the second question

--- a/Specializations/Machine Learning/Classification/Week 2/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 2/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -301,13 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2955"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "products['contains_perfect'] = products['perfect'].apply(lambda x: 1 if x >= 1 else )"
+    "products['contains_perfect'] = products['perfect'].apply(lambda x: 1 if x >= 1 else 0)\n",
+    "products['contains_perfect'].sum()"
    ]
   },
   {
@@ -330,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -348,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -398,11 +410,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(53072, 194)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_matrix.shape"
    ]
@@ -425,11 +448,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  1,  1, ..., -1, -1, -1])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sentiment"
    ]
@@ -455,11 +489,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "produces probablistic estimate for P(y_i = +1 | x_i, w).\n",
@@ -467,12 +509,10 @@
     "'''\n",
     "def predict_probability(feature_matrix, coefficients):\n",
     "    # Take dot product of feature_matrix and coefficients  \n",
-    "    # YOUR CODE HERE\n",
-    "    ...\n",
+    "    product = feature_matrix.dot(coefficients)\n",
     "    \n",
     "    # Compute P(y_i = +1 | x_i, w) using the link function\n",
-    "    # YOUR CODE HERE\n",
-    "    predictions = ...\n",
+    "    predictions = 1 / (1 + np.exp(-product))\n",
     "    \n",
     "    # return predictions\n",
     "    return predictions"
@@ -548,11 +588,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following outputs must match \n",
+      "------------------------------------------------\n",
+      "correct_predictions           = [ 0.98201379  0.26894142]\n",
+      "output of predict_probability = [ 0.98201379  0.26894142]\n"
+     ]
+    }
+   ],
    "source": [
     "dummy_feature_matrix = np.array([[1.,2.,3.], [1.,-1.,-1]])\n",
     "dummy_coefficients = np.array([1., 3., -1.])\n",
