--- a/Specializations/Machine Learning/Classification/Week 2/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 2/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -410,11 +410,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(53072, 194)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_matrix.shape"
    ]
@@ -437,11 +448,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  1,  1, ..., -1, -1, -1])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sentiment"
    ]
@@ -467,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -558,11 +580,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following outputs must match \n",
+      "------------------------------------------------\n",
+      "correct_predictions           = [ 0.98201379  0.26894142]\n",
+      "output of predict_probability = [ 0.98201379  0.26894142]\n"
+     ]
+    }
+   ],
    "source": [
     "dummy_feature_matrix = np.array([[1.,2.,3.], [1.,-1.,-1]])\n",
     "dummy_coefficients = np.array([1., 3., -1.])\n",
@@ -596,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -625,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -655,11 +688,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following outputs must match \n",
+      "------------------------------------------------\n",
+      "correct_log_likelihood           = -5.33141161544\n",
+      "output of compute_log_likelihood = -5.33141161544\n"
+     ]
+    }
+   ],
    "source": [
     "dummy_feature_matrix = np.array([[1.,2.,3.], [1.,-1.,-1]])\n",
     "dummy_coefficients = np.array([1., 3., -1.])\n",
@@ -696,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -743,11 +787,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration   0: log likelihood of observed labels = -36780.91768478\n",
+      "iteration   1: log likelihood of observed labels = -36775.13434712\n",
+      "iteration   2: log likelihood of observed labels = -36769.35713564\n",
+      "iteration   3: log likelihood of observed labels = -36763.58603240\n",
+      "iteration   4: log likelihood of observed labels = -36757.82101962\n",
+      "iteration   5: log likelihood of observed labels = -36752.06207964\n",
+      "iteration   6: log likelihood of observed labels = -36746.30919497\n",
+      "iteration   7: log likelihood of observed labels = -36740.56234821\n",
+      "iteration   8: log likelihood of observed labels = -36734.82152213\n",
+      "iteration   9: log likelihood of observed labels = -36729.08669961\n",
+      "iteration  10: log likelihood of observed labels = -36723.35786366\n",
+      "iteration  11: log likelihood of observed labels = -36717.63499744\n",
+      "iteration  12: log likelihood of observed labels = -36711.91808422\n",
+      "iteration  13: log likelihood of observed labels = -36706.20710739\n",
+      "iteration  14: log likelihood of observed labels = -36700.50205049\n",
+      "iteration  15: log likelihood of observed labels = -36694.80289716\n",
+      "iteration  20: log likelihood of observed labels = -36666.39512033\n",
+      "iteration  30: log likelihood of observed labels = -36610.01327118\n",
+      "iteration  40: log likelihood of observed labels = -36554.19728365\n",
+      "iteration  50: log likelihood of observed labels = -36498.93316099\n",
+      "iteration  60: log likelihood of observed labels = -36444.20783914\n",
+      "iteration  70: log likelihood of observed labels = -36390.00909449\n",
+      "iteration  80: log likelihood of observed labels = -36336.32546144\n",
+      "iteration  90: log likelihood of observed labels = -36283.14615871\n",
+      "iteration 100: log likelihood of observed labels = -36230.46102347\n",
+      "iteration 200: log likelihood of observed labels = -35728.89418769\n",
+      "iteration 300: log likelihood of observed labels = -35268.51212683\n"
+     ]
+    }
+   ],
    "source": [
     "coefficients = logistic_regression(feature_matrix, sentiment, initial_coefficients=np.zeros(194),\n",
     "                                   step_size=1e-7, max_iter=301)"
@@ -791,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -810,13 +888,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "positives = scores > 0"
+    "def classPredictions(score):\n",
+    "    if score > 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return -1\n",
+    "predictionsFunc = np.vectorize(classPredictions)\n",
+    "predictions = predictionsFunc(scores)"
    ]
   },
   {
@@ -828,13 +912,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25126"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len(positives[positives == True])"
+    "predictions[predictions == 1].sum()"
    ]
   },
   {
@@ -854,13 +949,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------------------------------\n",
+      "# Reviews   correctly classified = 39903\n",
+      "# Reviews incorrectly classified = 13169\n",
+      "# Reviews total                  = 53072\n",
+      "-----------------------------------------------------\n",
+      "Accuracy = 0.75\n"
+     ]
+    }
+   ],
    "source": [
-    "negatives = scores <= 0\n",
     "num_mistakes =  (sentiment != predictions).sum()\n",
     "accuracy = 1. * (len(products) - num_mistakes) / len(products)\n",
     "print \"-----------------------------------------------------\"\n",
